version 2024b, in progress
- instrings() function: add optional boolean argument to get
  a simple boolean return value
- typeof() function: functionality is extended to cover hansl
  expressions in general
- exists() function: recommended usage is restricted to top-
  level identifiers, but backward compatibility is preserved
  for the present
- help files: clarify the help for some commands and improve
  formatting
- Fix bug: crash on replacing a single character in a string
  variable, when the replacement UTF-8 character takes up more
  bytes than the original
- Fix bug: potential crash when using the "smpl" command on a
  dataset that is already subject to random resampling
- GUI, function packages: further extensions to the "ui-maker"
  functionality, plus minor fixes for the function-call dialog
- GUI: support the --preserve-panel option in the dialog box
  for sub-sampling
- GUI: support the Gamma distribution under /Tools/Distribution
  graphs
- GUI: fix the "Packages" entry under Help
- GUI: ensure that all fonts scale on zoom in/out in help

2024-04-05 version 2024a
- gretl "addons": integrate with releases on all platforms
- $sysinfo bundle: add gnuplot version as scalar ("gnuplot")
- "plot" command: update the help text and apply a fix for the
  case of showing multiple bands
- "tsplots" command with matrix input: don't require a list
  argument, plot all columns by default
- "gnuplot" command with --matrix and --time-series options:
  show dataset time on x-axis if possible
- "gnuplot" command: add --y2axis option to specify placement
  of a specifed y-variable on a second axis
  show dataset time on x-axis if possible
- "info" command: add --to-file and --from-file options for
  manipulating the description of a dataset
- "clear" command: add --all option to clear both function
  definitions and all data
- "outfile" block: add a --decpoint option to enforce use of
  decimal point (dot) for output within the block